# imgcull

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.Apache  README.md
docs/: acceptance-tests.md
docs/examples/: config.toml  prompts.toml
docs/superpowers/plans/: 2026-03-21-imgcull-implementation.md
docs/superpowers/specs/: 2026-03-21-imgcull-design.md
src/: cli.rs  config.rs  discovery.rs  lib.rs  llm.rs  main.rs  pipeline.rs  preprocessing.rs  retry.rs  scoring.rs  summary.rs  xmp.rs
tests/: cli_test.rs  config_test.rs  discovery_test.rs  preprocessing_test.rs  retry_test.rs  scoring_test.rs  xmp_test.rs
tests/fixtures/: existing.xmp  malformed.xmp  with_description.xmp
