[package]
name = "imgcull"
version = "0.2.0"
edition = "2024"
description = "AI-powered image culling tool using vision LLMs"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rig-core = { version = "0.33", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
toml = "1"
quick-xml = "0.39"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
dotenvy = "0.15"
dirs = "6"
anyhow = "1"
indicatif = "0.18"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
